@@ -11,6 +11,11 @@ http://webcalendar.cvs.sourceforge.net/*checkout*/webcalendar/webcalendar/Change
 Version 1.2.b2 (?? ??? 2007)
  - Added new 'Security Audit' page.
  - Moved hard-coded upcoming.php config setting to System Settings.
+ - Added new RSS feed for Activity Log.  This will allow you to be
+   notified via RSS of event approvals/rejections, email notification,
+   new event submissions, event updates, etc.
+ - Removed old hack for register_globals work-around that is no longer
+   needed.  This will improve security.
 
 Version 1.2.b1 (25 Feb 2007)
  - Changed default installation user/password to root/none
